2013-02-12  Christopher Schmidt  <christopher@ch.ristopher.com>

	Add dired-hide-details-mode.  (Bug#6799)

	* locate.el (locate-mode): Set parent mode property to dired-mode.

	* find-dired.el (find-dired): Call dired-insert-set-properties on
	initial information line.  Set process mark on end of buffer.
	(find-dired-sentinel):
	Call dired-insert-set-properties on summary.

	* dired.el (dired-hide-details-hide-symlink-targets)
	(dired-hide-details-hide-information-lines): New options.
	(dired-insert-directory):
	Set properties after final treatment of output.
	(dired-insert-set-properties):
	Set dired-hide-details-* properties.
	(dired-mode-map): Bind dired-hide-details-mode.
	(dired-mode): Set buffer-invisibility-spec to a list.
	(dired-next-line): Skip hidden lines.
	(dired-previous-line): Use dired-next-line.
	(dired-hide-details-mode): New minor mode.
	(dired-hide-details-update-invisibility-spec): New function.

2013-02-13  Glenn Morris  <rgm@gnu.org>

	* play/yow.el: Move to obsolete/.  (Bug#9384)

2013-02-13  Juri Linkov  <juri@jurta.org>

	* vc/ediff-util.el (ediff-recenter): Use `select-frame-set-input-focus'
	to select `ediff-control-frame' and set input focus correctly on Xfce.
	(Bug#12218)

2013-02-13  Juri Linkov  <juri@jurta.org>

	* image-mode.el (image-mode-map):
	* doc-view.el (doc-view-mode-map):
	* vc/ediff-util.el (ediff-setup-keymap):
	Make S-SPC scroll in the opposite sense to SPC.  (Bug#2145)

2013-02-13  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-move-to-block): Improve
	performance.  Instead of recalculating indentation fully for each
	line, sum up indentation depth based only on visited lines.
	(ruby-parse-partial): Increase the depth after "do" even when END
	is right after it.
	(ruby-parse-partial): When END is in the middle of a percent
	literal, increase the depth if the delimiter chars belong to the
	paren syntax class.

2013-02-13  Kirill A. Korinskiy  <catap@catap.ru>
